--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -4,7 +4,7 @@
         <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter
         der Leitung von Prof. Dr. Christoph Meinel zusammen
         mit dem
-        <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von knapp
+        <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von über
         300 Schulen und unterstützt vom Bundesministerium für
         Forschung und Bildung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrer und
         Schüler
@@ -19,10 +19,10 @@
     </ul>
     <br/>
     <p>Das Projekt Schul-Cloud ist im September 2016 in die 5-monatige Konzeptphase gestartet. Ab Mai 2017 startete die
-        Pilotphase, in der 27 MINT-EC-Schulen die Schul-Cloud testen und nutzen. Ab Mai 2018 startet die Roll-out-Phase,
-        in der die Nutzung und Testung der Schul-Cloud stufenweise auf alle 300 Schulen aus dem nationalen
-        Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Seit dem wächst auch unser <a
-                href="https://schul-cloud.org/team">Team</a> stetig!</p>
+        Pilotphase, in der zunächst 27 MINT-EC-Schulen die Schul-Cloud testen und nutzen konnten. Im Mai 2018 begann die Roll-Out-Phase,
+        in der die Nutzung der Schul-Cloud stufenweise auf alle über 300 Schulen aus dem nationalen
+        Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Zunächst wurden 40 weitere MINT-EC Schulen an die Schul-Cloud abgebunden, sodass derzeit 67 Pilotschulen die Schul-Cloud testen können (Stand Juli 2018). <br/> Auch unser <a
+                href="https://schul-cloud.org/team">Team</a> wächst stetig!</p>
     <br/>
     <div class="section-partner">
         <h4>Pilotschulen</h4>
