--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -4,7 +4,7 @@
 
     <h5>Wie bewerben sich MINT-EC Schulen?</h5>
 
-    <p>Ab Mai 2018 beginnt die zweite Pilotphase, in der die Erprobung der Schul-Cloud auf alle 300 MINT-EC Schulen ausgeweitet
+    <p>Ab Mai 2018 beginnt die zweite Pilotphase, in der die Erprobung der Schul-Cloud auf alle über 300 MINT-EC Schulen ausgeweitet
         wird. Um die Schul-Cloud als MINT-EC Schule testen zu können, ist lediglich eine online Bewerbung erforderlich. Diese
         finden Sie auf der <a href="https://www.mint-ec.de/veranstaltungen/849-schul-cloud-teilnahme-an-der-zweiten-pilotphase/" target="_blank">Website des MINT-EC</a>. Dort können Sie ebenfalls erforderliche technische Rahmenbedingungen und weitere Informationen
         bezüglich der Nutzung der Schul-Cloud einsehen. Bei Fragen wenden Sie sich gerne an den Projektkoordinator des MINT-EC,
