replace search with vue search, some restructuring

--- a/views/content/forms/form-search.hbs
+++ b/views/content/forms/form-search.hbs
@@ -1,12 +1,11 @@
 {{#content "scripts" mode="append"}}
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js" defer></script>
 {{/content}}
 
 <div id="app">
-  Bitte mit der App überschreiben.
+  Vue-Fehler
 </div>
 
-<form method="get">
+<!-- <form method="get">
     <div class="search-wrapper">
         <div class="input-group input-group-lg">
             <input value="{{ query }}"
@@ -17,4 +16,4 @@
         </div>
         <input type="hidden" name="isCourseGroupTopic" value="{{ isCourseGroupTopic }}" />
     </div>
-</form>
+</form> -->
