--- a/views/my-material/my-material.hbs
+++ b/views/my-material/my-material.hbs
@@ -7,7 +7,6 @@
 
     {{#content "styles" mode="append"}}
         <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-        <!-- <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet"> -->
     {{/content}}
 
     {{#content "page"}}
@@ -15,54 +14,7 @@
         <div id="app">
           Hier sollte eigentlich ein Template geladen werden!
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p>
-          Hier werden Sie bald die Möglichkeit haben, eigene Inhalte zu erstellen, sich Inhalte anderer Lehrer*Innen anzuschauen und durch Bewerten und Kategorisieren dieser Punkte verdienen, um die erweiterten Suchfunktionen nutzen zu können. Interessiert, wie das funktionieren wird? Lesen Sie den <a href="https://blog.schul-cloud.org/unterrichtsvorbereitung-in-der-hpi-schul-cloud-neu-gedacht/" target="_blank">Blogartikel</a> und nutzen Sie die Möglichkeit, das Feature nach ihren Wünschen zu gestalten.
-        </p>
 
-        <form class="" action="/my-material/search" method="post">
-          <label for="term">Suchbegriff</label>
-          <input type="text" name="term" value="{{query.term}}" id="internal-search-input" placeholder="Suchbegriff">
-          <br>
-          <label for="subject">Fach</label>
-          <input type="text" name="subject" value="{{query.subject}}" id="internal-search-subject" placeholder="Fach">
-          <br>
-          <label for="age">Alter</label>
-          <input type="number" name="age" value="{{query.age}}" id="internal-search-age" placeholder="Alter">
-          <br>
-          <label for="only-approved">Nur bestätigte Inhalte: </label>
-          <input type="checkbox" name="only-approved" checked>
-          <br>
-          <input type="submit" name="" value="Suchen">
-        </form>
-        <br>
-
-        <h3>Sucherergebnisse</h3>
-        <span>Anzahl Ergebnisse: {{ hits }}</span>
-        {{#with searchResults}}
-        <div class="row equal-height">
-          {{#each this}}
-              <div class="col-md-6 col-lg-4" style="border: 2px solid #B10438; padding: 5px;">
-                  <ul>
-                    <li>Titel: {{ this._source.title }}</li>
-                    <li>Beschreibung: {{ this._source.description }}</li>
-                    <li>Inhalt: {{ this._source.content }}</li>
-                    <li>Provider: {{ this._source.providerName }}</li>
-                    <li>Schwierigkeitsgrad: {{ this._source.difficulty }}</li>
-                    <li>Unterichtsziel: {{ this._source.goal }}</li>
-                    <li>Fach: {{ this._source.subjects }}</li>
-                    <li>Alter: {{ this._source.age }}</li>
-                    <li>{{ this._source.approved }}</li>
-                    <li>id: {{ this._id }}</li>
-                  </ul>
-              </div>
-          {{/each}}
-        </div>
-        {{/with}}
     {{/content}}
 
 
@@ -113,6 +65,55 @@
             <li>Fach: {{ this.categories.subject }}</li>
             <li>Alter: {{ this.categories.age }}</li>
             <li>Durchschnittsbewertung (insgesamt): {{ ratingOverallAverage this.ratings }}</li>
+            <li>id: {{ this._id }}</li>
+          </ul>
+      </div>
+  {{/each}}
+</div>
+{{/with}} -->
+
+<!-- <br>
+<br>
+<br>
+<br>
+<br>
+<p>
+  Hier werden Sie bald die Möglichkeit haben, eigene Inhalte zu erstellen, sich Inhalte anderer Lehrer*Innen anzuschauen und durch Bewerten und Kategorisieren dieser Punkte verdienen, um die erweiterten Suchfunktionen nutzen zu können. Interessiert, wie das funktionieren wird? Lesen Sie den <a href="https://blog.schul-cloud.org/unterrichtsvorbereitung-in-der-hpi-schul-cloud-neu-gedacht/" target="_blank">Blogartikel</a> und nutzen Sie die Möglichkeit, das Feature nach ihren Wünschen zu gestalten.
+</p>
+
+<form class="" action="/my-material/search" method="post">
+  <label for="term">Suchbegriff</label>
+  <input type="text" name="term" value="{{query.term}}" id="internal-search-input" placeholder="Suchbegriff">
+  <br>
+  <label for="subject">Fach</label>
+  <input type="text" name="subject" value="{{query.subject}}" id="internal-search-subject" placeholder="Fach">
+  <br>
+  <label for="age">Alter</label>
+  <input type="number" name="age" value="{{query.age}}" id="internal-search-age" placeholder="Alter">
+  <br>
+  <label for="only-approved">Nur bestätigte Inhalte: </label>
+  <input type="checkbox" name="only-approved" checked>
+  <br>
+  <input type="submit" name="" value="Suchen">
+</form>
+<br>
+
+<h3>Sucherergebnisse</h3>
+<span>Anzahl Ergebnisse: {{ hits }}</span>
+{{#with searchResults}}
+<div class="row equal-height">
+  {{#each this}}
+      <div class="col-md-6 col-lg-4" style="border: 2px solid #B10438; padding: 5px;">
+          <ul>
+            <li>Titel: {{ this._source.title }}</li>
+            <li>Beschreibung: {{ this._source.description }}</li>
+            <li>Inhalt: {{ this._source.content }}</li>
+            <li>Provider: {{ this._source.providerName }}</li>
+            <li>Schwierigkeitsgrad: {{ this._source.difficulty }}</li>
+            <li>Unterichtsziel: {{ this._source.goal }}</li>
+            <li>Fach: {{ this._source.subjects }}</li>
+            <li>Alter: {{ this._source.age }}</li>
+            <li>{{ this._source.approved }}</li>
             <li>id: {{ this._id }}</li>
           </ul>
       </div>
