get and submit data in classes manage

--- a/views/administration/classes-manage.hbs
+++ b/views/administration/classes-manage.hbs
@@ -10,7 +10,7 @@
 
     {{#content "page"}}
         <section class="section-classes-manage">
-            <form class="manage-form" method="update" action="">
+            <form class="manage-form" method="post" action="">
                 {{> "administration/forms/form-classes-manage"}}
             </form>
         </section>
