remove some explicit rendering

--- a/views/homework/components/course_overview_card_template.hbs
+++ b/views/homework/components/course_overview_card_template.hbs
@@ -7,7 +7,7 @@
         <h5 class="title">{{this.name}}</h5>
         <div class="description">
             {{#if this.description}}
-                {{{truncateHTML (conflictFreeHtml this.description)}}}
+                {{truncateHTML (conflictFreeHtml this.description)}}
             {{else}}
                 keine Beschreibung vorhanden
             {{/if}}
