--- a/views/lib/components/table.hbs
+++ b/views/lib/components/table.hbs
@@ -44,7 +44,7 @@
                                 {{/each}}
                             </td>
                         {{else}}
-                            <td>{{{this}}}</td>
+                            <td>{{this}}</td>
                         {{/ifArray}}
                     {{/each}}
                 </tr>
