--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,9 +1,9 @@
 <article class="sc-card">
     <a href="{{this.url}}" rel="canonical" class="sc-card-header" {{#if this.background}}style="background:{{this.background}};"{{/if}}>
         <span class="sc-card-title">
-            <span class="title">{{{this.title}}}</span>
+            <span class="title">{{this.title}}</span>
             {{#if this.secondaryTitle}}
-                <small class="d-block">{{{this.secondaryTitle}}}</small>
+                <small class="d-block">{{this.secondaryTitle}}</small>
             {{/if}}
         </span>
 
@@ -33,7 +33,7 @@
         </div>
     </a>
     <div class="sc-card-body ckcontent">
-        {{{truncateHTML (conflictFreeHtml this.content)}}}
+        {{truncateHTML (conflictFreeHtml this.content)}}
     </div>
     <div class="sc-card-footer">
         <a href="{{url}}" rel="canonical">{{{link-text}}}</a>
