--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -188,6 +188,7 @@
                                     <strong>{{ currentUser.displayName }} ({{ currentRole }})</strong>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="/account/profile">Profil</a>
                                     <a class="dropdown-item" href="/account/">Einstellungen</a>
                                     <a class="dropdown-item" href="/logout/">Abmelden</a>
                                 </div>
