--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -2,7 +2,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/vendor-vue.js" defer></script>
-        <script src="/scripts/content/review.js" defer></script>
+        <script src="/scripts/content/content.js" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
