--- a/views/content/review-content.hbs
+++ b/views/content/review-content.hbs
@@ -2,7 +2,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/vendor-vue.js" defer></script>
-        <script src="/scripts/content/review.js" defer></script>
+        <script src="/scripts/content/review-content.js" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
@@ -10,6 +10,7 @@
     {{/content}}
 
     {{#content "page"}}
+
       <div id="app">
       </div>
 
