--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -2,7 +2,7 @@
     <input class="form-control" name="classid" type="hidden" value="{{class._id}}"/>
 
     {{#userHasPermission "STUDENT_CREATE"}} 
-        <a class="btn-edit text-muted pull-right"
+        <a class="btn-edit text-muted mb-1"
             href="/administration/classes/{{@root.class/_id}}/edit"
             title="Klasse bearbeiten '{{@root.class.name}}'.">
             Klasse bearbeiten <i class="fa fa-pencil"></i>
@@ -47,7 +47,7 @@
 
 
 
-<a href="{{@root.referer}}" class="btn btn-secondary">Abbrechen</a>
+<a href="/administration/classes" class="btn btn-secondary">Abbrechen</a>
 <button type="submit" class="btn btn-primary">Änderungen speichern</button>
 
 <hr class="my-2"/>
