--- a/views/administration/systems.hbs
+++ b/views/administration/systems.hbs
@@ -13,7 +13,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add">
+                            <button type="submit" class="btn btn-primary btn-add-modal">
                                 System hinzufügen
                             </button>
                         </div>
