--- a/views/administration/students_edit.hbs
+++ b/views/administration/students_edit.hbs
@@ -87,7 +87,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button class="btn btn-add btn-secondary btn-cancel">
+                        <button class="btn btn-secondary btn-cancel">
                             {{closeLabel}}
                         </button>
 
