--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -23,7 +23,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add">
+                            <button type="submit" class="btn btn-primary btn-add-modal">
                                 Lehrer hinzufügen
                             </button>
                             <button class="btn btn-secondary btn-import">
