--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -58,9 +58,10 @@
 </p>
 
 <input id="invitationLink" class="w-100" value="{{invitationLink}}" readonly/>
-<button type="button" class="btn-link copy" data-copy-selector="#invitationLink">Link kopieren</button>
-<!-- QR Code currently not working -->
-<button type="button" class="col-6 btn-link hidden" id="printInvitation">Link mit QR-Code Drucken</button>
+<div class="clearfix">
+    <button type="button" class="pull-left btn-link copy" data-copy-selector="#invitationLink">Link kopieren</button>
+    <button type="button" class="pull-right btn-link" id="printInvitation">Link mit QR-Code Drucken</button>
+</div>
 
 <p class="mt-1">Bitte beachte:</p>
 <div class="row">
