added password to submit and error messages

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -128,13 +128,13 @@
             <div id="temp-pin" class="hidden"></div>
             {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
         </div>
+        <input type="hidden" name="initial-password" class="student-password-input" />
       </section>
 
 
 
       <section data-panel="section-5">
         <h4>Vielen Dank für die Registrierung in der Schul-Cloud</h4>
-
         <div id="userdata-summary" class="hidden">
           <p>
             Mit folgenden Daten kann sich
