remove deprecated code and allways show recap on registration

--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -53,7 +53,8 @@
           </div>
         </div>
         <p>Erhebung erfolgt für Forschung und Optimierung.</p>
-          <input type="hidden" name="classId" value="{{classId}}" />
+
+        <input type="hidden" name="classId" value="{{classId}}" />
       </section>
 
 
@@ -135,7 +136,7 @@
 
       <section data-panel="section-5">
         <h4>Vielen Dank für die Registrierung in der Schul-Cloud</h4>
-        <div id="userdata-summary" class="hidden">
+        <div>
           <p>
             Mit folgenden Daten kann sich
             <b data-from="student-firstname"></b>
@@ -150,11 +151,10 @@
               <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
                 <i class="fa fa-print"></i> Drucken
               </div>
-                  </div>
+            </div>
           </p>
 
           <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
-          <input class="hidden" type="hidden" value="{{classId}}" />
         </div>
 
         <p>Ihr Kind kann sich nun einloggen:</p>
