Lernstore: Added Licenses Modal

--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -41,6 +41,7 @@
             </a>
         {{/userIsAllowedToViewContent}}
 
+        <a class="pull-left licenses-link" href="#!" data-licenses='{{{ json licenses }}}'>Lizenzbestimmungen</a><br>
         <span>via {{{ providerName }}}</span>
         {{#if @root.isCourseGroupTopic}}
             <a class="add-to-lesson pull-right" href="{{{ _id }}}">
