--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -49,6 +49,12 @@
             {{/content}}
         {{/embed}}
 
+        {{#embed "lib/components/modal" class="licenses-modal"}}
+            {{#content "body"}}
+                {{> "content/forms/form-licenses"}}
+            {{/content}}
+        {{/embed}}
+
     {{/content}}
 
     {{#content "scripts" mode="append"}}
