--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -159,7 +159,7 @@
 
         <p>Ihr Kind kann sich nun einloggen:</p>
 
-        <a class="btn btn-primary" href="//schul-cloud.org/login">Login öffnen</a>
+        <a class="btn btn-primary" href="/login">Login öffnen</a>
       </section>
       {{/content}}
     {{/embed}}
