--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -119,7 +119,7 @@
         
         <p>Beim ersten Login muss ein neues Passwort gewählt werden.</p>
 
-        <a class="btn btn-primary" href="//schul-cloud.org/login">Login öffnen</a>
+        <a class="btn btn-primary" href="/login">Login öffnen</a>
       </section>
       {{/content}}
     {{/embed}}
