--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -87,7 +87,7 @@
         <p>
             Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf! <br/>
             Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
-            Erlaubte Sonderzeichen sind:  -_!<>§$%&/()=?\;:,.#+*~'
+            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code>
         </p>
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
