publish and rate content

--- a/views/content/overview.hbs
+++ b/views/content/overview.hbs
@@ -2,7 +2,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/vendor-vue.js" defer></script>
-        <!-- <script src="/scripts/userGeneratedContent/review.js" defer></script> -->
+        <script src="/scripts/content/overview.js" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
@@ -10,9 +10,6 @@
     {{/content}}
 
     {{#content "page"}}
-
-      <h1>Materialien in der Schul-Cloud</h1>
-
       <div id="app">
       </div>
 
