--- a/views/administration/dataprivacy/student.hbs
+++ b/views/administration/dataprivacy/student.hbs
@@ -18,7 +18,7 @@
           </p>
           <div class="row">
             <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-              <span><Label>Geschlecht</Label>
+              <span><label>Geschlecht</label>
               <p class="text-muted" style="display: inline"> (optional)</p></span>
               <select class="form-control form-control-lg" type="text" name="gender">
                 <option value="">Geschlecht auswählen</option>
@@ -28,7 +28,7 @@
               </select>
             </div>
             <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-              <span><Label>Geschlechter</Label></span>
+              <span><label>Geschlechter</label></span>
               <select class="form-control form-control-lg" type="text" name="genders" multiple>
                 <option value="">Geschlechter auswählen</option>
                 <option value="male">Männlich</option>
