WIP rework firstlogin submit

--- a/views/firstLogin/firstLoginExistingUserU14.hbs
+++ b/views/firstLogin/firstLoginExistingUserU14.hbs
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
  {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=2 action="existing/submit" method="POST"}}
+    {{#embed "lib/forms/paginatedForm" sections=2 action="/firstLogin/submit" method="POST"}}
       {{#content "panels"}}
           <section data-panel="section-1" class="submit-page">
               <h4>Du hast es fast geschafft…</h4>
