--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
   {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=5 action="/submit" method="post"}}
+    {{#embed "lib/forms/paginatedForm" sections=5 action="/firstLogin/submit" method="post"}}
       {{#content "panels"}}
 
       <section data-panel="section-1">
@@ -90,6 +90,10 @@
             Erlaubte Sonderzeichen sind:  -_!<>§$%&/()=?\;:,.#+*~'
         </p>
         <div class="row">
+          <div class="form-group col-md-6 col-sm-12">
+            <label>Altes Passwort: *</label>
+            <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
+          </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Neues Passwort: *</label>
             <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
