--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
  {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=3 action="/submit" method=""}}
+    {{#embed "lib/forms/paginatedForm" sections=3 action="/firstLogin/submit" method="post"}}
       {{#content "panels"}}
 
       <section data-panel="section-1">
@@ -22,6 +22,10 @@
         <h4>Du hast es fast geschafft...</h4>
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
          <div class="row">
+          <div class="form-group col-md-6 col-sm-12">
+            <label>Altes Passwort: *</label>
+            <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
+          </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Neues Passwort: *</label>
               <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
