--- a/views/firstLogin/firstLoginExistingUser.hbs
+++ b/views/firstLogin/firstLoginExistingUser.hbs
@@ -9,7 +9,7 @@
   {{/content}}
   {{#content "page"}}
     <div id="welcome-screen">
-      <p>Herzlich Willkommen in der HPI Schul-Cloud, {Vorname Nachname}</p>
+      <p>Herzlich Willkommen in der HPI Schul-Cloud, {{currentUser.firstName}} {{currentUser.lastName}}</p>
       <p>Mit dem Schuljahr 2018/2019 haben wir die Registrierung in der Schul-Cloud von Papier auf Digital umgestellt. Das macht es notwendig, dass wir dein Einverständnis zur Nutzung der Schul-Cloud erneut elektronisch erfassen, sofern du älter als 13 Jahre bist.</p>
 
         <p>Bitte wähle: Ich bin...</p>
