--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>E-Mail:</label>
-              <input class="form-control" type="email" placeholder="schueler@schul-cloud.org" required title="Bitte gib eine gültige E-Mail Adresse ein."></input>
+              <input class="form-control" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required title="Bitte gib eine gültige E-Mail Adresse ein."></input>
           </div>
         </div>
       </section>
