--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -1,10 +1,11 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/filter/filter.css"/>
+        <link rel="stylesheet" href="/styles/administration/users.css"/>
     {{/content}}
     {{#content "page"}}
         <div class="route-administration">
-            <section class="section-school section-default">
+            <section class="section-students section-default">
                 <div><feathers-filter id="filter"
                                       filter='{{filterSettings}}'
                                       add-label='Filter hinzufügen'
