--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -84,16 +84,17 @@
 
       <section data-panel="section-4" class="submit-page">
         <h4>Du hast es fast geschafft...</h4>
-        <p>
-            Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf! <br/>
-            Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
-            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code>
-        </p>
+        <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
         <div class="row">
-          <div class="form-group col-md-6 col-sm-12">
-            <label>Altes Passwort: *</label>
-            <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
+            <div class="form-group col-md-6 col-sm-12">
+                <label>Altes Passwort: *</label>
+                <input class="form-control" id="password_verification" name="password_verification" type="password" placeholder="*******" required/>
           </div>
+        </div>
+
+        <p>Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen. <br/>
+            Erlaubte Sonderzeichen sind: <code>!§$%&/()=?\;:,.#+*~</code></p>
+        <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Neues Passwort: *</label>
             <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
